the_project/manifests/todo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-dep
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: cache-claim
      containers:
        - name: todo
          image: waltherbeach/todo:26-01-7
          volumeMounts:
            - name: cache
              mountPath: /app/cache
          ports:
            - containerPort: 3001
