the_project/manifests/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
